# IPvMe
# Copyright (c) 2022-2023 Colin Cogle <colin@colincogle.name>
#
# This file, Makefile.am, is part of IPvMe.
# <https://github.com/rhymeswithmogul/IPvMe>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU Affero General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more
# details.
#
# You should have received a copy of the GNU Affero General Public License along
# with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.html>.

AUTOMAKE_OPTIONS = foreign -Woverride
bin_PROGRAMS = ipvme
dist_noinst_SCRIPTS = autogen.sh
ipvme_SOURCES = src/ipvme.c src/help.c
man1_MANS = man/ipvme.man